test/integration/bad/map_rect/stanc.expected
  $ ../../../../../install/default/bin/stanc bad_data_i_type.stan
Semantic error in 'bad_data_i_type.stan', line 19, column 8 to column 68:
   -------------------------------------------------
    17:  transformed parameters {
    18:    vector[3] y_hat_gq
    19:        = map_rect(foo, shared_params_d, job_params_d, data_r, data_i);
                 ^
    20:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'map_rect':
(<F1>, vector, array[] vector, array[,] real, array[,,] int)
where F1 = (vector, vector, array[] real, array[] int) => vector
Available signatures:
(<F2>, vector, array[] vector, data array[,] real, data array[,] int) => vector
where F2 = (vector, vector, data array[] real, data array[] int) => vector
  The 5th argument must be array[,] int but found array[,,] int
  $ ../../../../../install/default/bin/stanc bad_data_int_const.stan
Semantic error in 'bad_data_int_const.stan', line 21, column 8 to line 22, column 43:
   -------------------------------------------------
    19:  transformed parameters {
    20:    vector[3] y_hat_gq
    21:        = map_rect(foo, shared_params_d, job_params_d, data_r,
                 ^
    22:                   { { 1,  a > 2 ? 1 : 2 } });
    23:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'map_rect':
(<F1>, vector, array[] vector, array[,] real, array[,] int)
where F1 = (vector, vector, array[] real, array[] int) => vector
Available signatures:
(<F2>, vector, array[] vector, data array[,] real, data array[,] int) => vector
where F2 = (vector, vector, data array[] real, data array[] int) => vector
  The 5th argument must be data-only. (Local variables are assumed to depend
  on parameters; same goes for function inputs unless they are marked with
  the keyword 'data'.)
  $ ../../../../../install/default/bin/stanc bad_data_r_type.stan
Semantic error in 'bad_data_r_type.stan', line 19, column 8 to column 68:
   -------------------------------------------------
    17:  transformed parameters {
    18:    vector[3] y_hat_gq
    19:        = map_rect(foo, shared_params_d, job_params_d, data_r, data_i);
                 ^
    20:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'map_rect':
(<F1>, vector, array[] vector, real, array[,] int)
where F1 = (vector, vector, array[] real, array[] int) => vector
Available signatures:
(<F2>, vector, array[] vector, data array[,] real, data array[,] int) => vector
where F2 = (vector, vector, data array[] real, data array[] int) => vector
  The fourth argument must be array[,] real but found real
  $ ../../../../../install/default/bin/stanc bad_data_real_const.stan
Semantic error in 'bad_data_real_const.stan', line 20, column 8 to column 70:
   -------------------------------------------------
    18:  transformed parameters {
    19:    vector[3] y_hat_gq
    20:        = map_rect(foo, shared_params_d, job_params_d, data_r_p, data_i);
                 ^
    21:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'map_rect':
(<F1>, vector, array[] vector, array[,] real, array[,] int)
where F1 = (vector, vector, array[] real, array[] int) => vector
Available signatures:
(<F2>, vector, array[] vector, data array[,] real, data array[,] int) => vector
where F2 = (vector, vector, data array[] real, data array[] int) => vector
  The fourth argument must be data-only. (Local variables are assumed to
  depend on parameters; same goes for function inputs unless they are marked
  with the keyword 'data'.)
  $ ../../../../../install/default/bin/stanc bad_fun_type.stan
Semantic error in 'bad_fun_type.stan', line 19, column 8 to column 68:
   -------------------------------------------------
    17:  transformed parameters {
    18:    vector[3] y_hat_gq
    19:        = map_rect(foo, shared_params_d, job_params_d, data_r, data_i);
                 ^
    20:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'map_rect':
(<F1>, vector, array[] vector, array[,] real, array[,] int)
where F1 = (vector, array[] vector, array[] real, array[] int) => vector
Available signatures:
(<F2>, vector, array[] vector, data array[,] real, data array[,] int) => vector
where F2 = (vector, vector, data array[] real, data array[] int) => vector
  The first argument must be
   (vector, vector, data array[] real, data array[] int) => vector
  but found
   (vector, array[] vector, array[] real, array[] int) => vector
  These are not compatible because:
    The second argument must be array[] vector but found vector
  $ ../../../../../install/default/bin/stanc bad_job_params_type.stan
Semantic error in 'bad_job_params_type.stan', line 19, column 8 to column 68:
   -------------------------------------------------
    17:  transformed parameters {
    18:    vector[3] y_hat_gq
    19:        = map_rect(foo, shared_params_d, job_params_d, data_r, data_i);
                 ^
    20:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'map_rect':
(<F1>, vector, array[] matrix, array[,] real, array[,] int)
where F1 = (vector, vector, array[] real, array[] int) => vector
Available signatures:
(<F2>, vector, array[] vector, data array[,] real, data array[,] int) => vector
where F2 = (vector, vector, data array[] real, data array[] int) => vector
  The third argument must be array[] vector but found array[] matrix
  $ ../../../../../install/default/bin/stanc bad_lp_fn.stan
Semantic error in 'bad_lp_fn.stan', line 22, column 16 to column 52:
   -------------------------------------------------
    20:  }
    21:  model {
    22:    target += sum(map_rect(lr_lp, beta, theta, xs, ys));
                         ^
    23:  }
   -------------------------------------------------

Mapped function cannot be an _rng or _lp function, found function name: lr_lp
  $ ../../../../../install/default/bin/stanc bad_not_enough_args.stan
Semantic error in 'bad_not_enough_args.stan', line 13, column 8 to column 68:
   -------------------------------------------------
    11:    int data_i[3, 3];
    12:    vector[3] y_hat_tp1
    13:        = map_rect(foo, shared_params_d, job_params_d, data_r, data_i);
                 ^
    14:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'map_rect':
(<F1>, vector, array[] vector, array[,] real, array[,] int)
where F1 = (vector, vector, array[] real) => vector
Available signatures:
(<F2>, vector, array[] vector, data array[,] real, data array[,] int) => vector
where F2 = (vector, vector, data array[] real, data array[] int) => vector
  The first argument must be
   (vector, vector, data array[] real, data array[] int) => vector
  but found
   (vector, vector, array[] real) => vector
  These are not compatible because:
    Expected 3 arguments but found 4 arguments.
  $ ../../../../../install/default/bin/stanc bad_rng_fn.stan
Semantic error in 'bad_rng_fn.stan', line 22, column 19 to column 56:
   -------------------------------------------------
    20:  }
    21:  transformed parameters {
    22:    vector[12] bar = map_rect(lr_rng, beta, theta, xs, ys);
                            ^
    23:  }
   -------------------------------------------------

Mapped function cannot be an _rng or _lp function, found function name: lr_rng
  $ ../../../../../install/default/bin/stanc bad_shared_params_type.stan
Semantic error in 'bad_shared_params_type.stan', line 19, column 8 to column 68:
   -------------------------------------------------
    17:  transformed parameters {
    18:    vector[3] y_hat_gq
    19:        = map_rect(foo, shared_params_d, job_params_d, data_r, data_i);
                 ^
    20:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'map_rect':
(<F1>, array[] vector, array[] vector, array[,] real, array[,] int)
where F1 = (vector, vector, array[] real, array[] int) => vector
Available signatures:
(<F2>, vector, array[] vector, data array[,] real, data array[,] int) => vector
where F2 = (vector, vector, data array[] real, data array[] int) => vector
  The second argument must be vector but found array[] vector
